# oci-iot-samples

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml
samples/C/M5Stack/: .clang-format  .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
samples/C/M5Stack/components/config_manager/: CMakeLists.txt  config_manager.c
samples/C/M5Stack/components/display_manager/: CMakeLists.txt  display_manager.c
samples/C/M5Stack/components/display_manager/include/: display_manager.h
samples/C/M5Stack/components/mqtt_manager/: CMakeLists.txt  mqtt_manager.c
samples/C/M5Stack/config-device/: oci-iot.distr.ini
samples/C/M5Stack/config-iot/: m5_cores3_adapter_envelope.json  m5_cores3_adapter_routes.json  m5_cores3_model.json
samples/C/M5Stack/main/: CMakeLists.txt  Kconfig  idf_component.yml  main.c
samples/C/M5Stack/partition_table/: partition_table.csv
samples/java/queues/: README.md  config.distr.properties  pom.xml
samples/python/aq-sub/: README.md  aq-sub.py  config.distr.py  stream-normalized.py
samples/python/command-response/: README.md  command-response.py  config.distr.py
samples/python/file-agent/: README.md  file-agent-config.yaml
samples/python/file-agent/DTDL/: file_agent_model.json  uploader_adapter_envelope.json  uploader_adapter_routes.json  uploader_model.json
samples/python/file-agent/commands/: demo.sh
samples/python/file-agent/file-agent/: pyproject.toml
samples/python/file-agent/file-agent/file_agent/: __init__.py  cli.py  device_demo.py  iot_context.py  iot_db.py  iot_raw.py  models.py  object_storage.py  oci_auth.py  processor.py
samples/python/file-agent/file-agent/tests/: test_cli.py  test_config.py  test_demo_command.py  test_device_demo.py  test_iot_context.py  test_iot_db.py  test_iot_raw.py  test_models.py  test_object_storage.py  test_packaging_layout.py  test_processor.py
samples/python/manage-dt/: pyproject.toml
samples/python/manage-dt/data/: m5_adapter_envelope.json  m5_adapter_routes.json  m5_model_custom.json  m5_model_default.json
samples/python/manage-dt/manage_dt/: cli.py  mdt_iot_data.py  mdt_iot_oci.py  mdt_oci.py
samples/python/publish-https/: config.distr.py
samples/python/publish-mqtt/: config.distr.py
samples/python/query-db/: query_db.py
samples/python/queues/: config.distr.py  sub-norm.py  sub-raw.py
samples/python/shared/: environmental_sensor_simulator.py
samples/script/manage-dt/: create_dtc_m5_env.sh  create_dtd_m5_env.sh
samples/script/publish-https/: README.md
samples/script/query-db/: README.md
samples/script/time-observed/: README.md
samples/terraform/iot-from-scratch/: identity.tf
samples/terraform/iot-from-scratch/download-certs/: download-certificates.py
(+39 files in other folders)
